@@ -13,6 +13,7 @@ next
 
   [Added]
   - Support for ICCCM input focus models and WM_TAKE_FOCUS.
+  - Support for ICCCM WM_STATE.
 
 Milestone 2  2016-01-01
   [Fixed]
